--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -9,5 +9,16 @@
   "tutorialmod.configuration.items": "Item List",
   "tutorialmod.configuration.logDirtBlock": "Log Dirt Block",
   "tutorialmod.configuration.magicNumberIntroduction": "Magic Number Text",
-  "tutorialmod.configuration.magicNumber": "Magic Number"
+  "tutorialmod.configuration.magicNumber": "Magic Number",
+
+  "item.tutorialmod.bismuth": "Bismuth",
+  "item.tutorialmod.raw_bismuth": "Raw Bismuth",
+  "item.tutorialmod.speed_blob": "Speed Blob",
+  "item.tutorialmod.slowness_blob": "Slowness Blob",
+
+  "block.tutorialmod.bismuth_block" : "Block of Bismuth",
+  "block.tutorialmod.bismuth_ore" : "Bismuth Ore",
+
+  "creativetab.tutorialmod.bismuth_items": "Bismuth items",
+  "creativetab.tutorialmod.bismuth_blocks": "Bismuth Blocks"
 }
